# gp-utils

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  conanfile.txt
applications/: CMakeLists.txt  gp-utils-ascii2bin.cpp  gp-utils-ascii2hdf5.cpp  gp-utils-bin2ascii.cpp  gp-utils-cyl2rec.cpp  gp-utils-extract.cpp  gp-utils-hdf52ascii.cpp  gp-utils-info.cpp
doc/: Makefile  README.md.t  generate-usage-for-docs.sh  help-messages.txt
scripts/: bootstrap
src/gputils/: exceptions.hpp  io.cpp  io.hpp  structs.hpp  transformations.cpp  transformations.hpp
testing/: CMakeLists.txt  pre-tag-release.sh
testing/CatchTests/: Devel.cpp
testing/Datasets/: 2d-data.txt  3d-data.txt
